# libttc

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
include/: ttc.h  ttc_base.h  ttc_types.h
include/etcpak/: DecodeDxtc.hpp  Dither.hpp  ForceInline.hpp  Math.hpp  ProcessCommon.hpp  ProcessDxtc.hpp  ProcessRGB.hpp  Tables.hpp  Vector.hpp
include/internal/: ttci.h  ttci_avx.h  ttci_dispatch.hpp  ttci_sse.h
src/: ttc.cpp  ttc_base.cpp  ttc_transcode.c
src/etcpak/: DecodeDxtc.cpp  Dither.cpp  ProcessDxtc.cpp  ProcessRGB.cpp  Tables.cpp
src/internal/: ttci_dispatch.cpp
